# lvmh-ai-dataiku-plugin-retrieval-reco

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yaml  plugin.json  poetry.toml  pyproject.toml  taskfile.yaml
.github/actions/setup/: action.yml
.github/workflows/: github-actions.yml  mkdocs-build.yml  semantic-release.yml
code-env/python/: desc.json
coding-style/: index.html
contributing/documentation/: index.html
contributing/github-ci-cd/: index.html
contributing/installation/: index.html
contributing/pre-commit/: index.html
contributing/tasks/: index.html
docs/: coding-style.md  index.md
docs/contributing/: documentation.md  github-ci-cd.md  installation.md  pre-commit.md  tasks.md
docs/references/: python-lib.md
python-lib/deep2tower/src/: image_only_model.py  model.py  utils.py
references/python-lib/: index.html
search/: search_index.json
tasks/: taskfile.hooks.yaml  taskfile.lock.yaml  taskfile.serve.yaml
